# kiss-bdk

./: .gitignore  Cargo.toml  README.md  build.rs
native/: k_quirc_bridge.c
native/include/: esp_log.h
native/include/freertos/: FreeRTOS.h  task.h
src/: k_quirc.rs  lib.rs  main.rs  qr.rs
tests/: cli.rs  psbt_contract.rs
tests/fixtures/: kiss-signed-qr-12.parts  kiss-signed-qr.b64
