[package]
name = "kiss-bdk"
version = "0.1.0"
edition = "2024"
description = "Experimental Testnet4 coordinator for the KISS air-gapped signer"
license = "Apache-2.0"
repository = "https://github.com/kkdao/kiss-bdk"
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bdk_esplora = { version = "0.22.2", default-features = false, features = ["std", "blocking-https-rustls"] }
bdk_wallet = { version = "3.1.0", features = ["rusqlite"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
minicbor = "2.2"
nokhwa = { version = "0.10.11", default-features = false, features = ["input-native"] }
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.26"
ur = "0.5.0"

[build-dependencies]
cc = "1.3"

[target.'cfg(target_os = "macos")'.dependencies]
nokhwa-bindings-macos = "0.2.4"

[dev-dependencies]
bdk_wallet = { version = "3.1.0", features = ["test-utils"] }
